--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,18 @@
     <groupId>groupId</groupId>
     <artifactId>zibil</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.46</version>
+        </dependency>
+    </dependencies>
     <!--https://mvnrepository.com/artifact/javax.faces/javax.faces-api-->
     <!--<dependency>-->
-        <!--<groupId>javax.faces</groupId>-->
-        <!--<artifactId>javax.faces-api</artifactId>-->
-        <!--<version>2.1</version>-->
-        <!--<scope>provided</scope>-->
+    <!--<groupId>javax.faces</groupId>-->
+    <!--<artifactId>javax.faces-api</artifactId>-->
+    <!--<version>2.1</version>-->
+    <!--<scope>provided</scope>-->
     <!--</dependency>-->
 </project>
