--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <packaging>ejb</packaging>
+    <packaging>pom</packaging>
 
     <groupId>groupId</groupId>
     <artifactId>zibil</artifactId>
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.46</version>
+            <version>8.0.11</version>
         </dependency>
     </dependencies>
 
