--- a/client/pom.xml
+++ b/client/pom.xml
@@ -9,77 +9,107 @@
     <version>1.0.0</version>
 
     <name>WildFly Example: EJB Remote Client</name>
-        <description>Java client for remote EJB example on Wildfly</description>
+    <description>Java client for remote EJB example on Wildfly</description>
 
-        <url>http://www.illucit.com</url>
-        <licenses>
-            <license>
-                <name>Apache License, Version 2.0</name>
-                <distribution>repo</distribution>
-                <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-            </license>
-        </licenses>
+    <url>http://www.illucit.com</url>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <distribution>repo</distribution>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+        </license>
+    </licenses>
 
-        <properties>
-            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-            <!-- other plugin versions -->
-            <version.compiler.plugin>3.1</version.compiler.plugin>
-            <version.exec.plugin>1.2.1</version.exec.plugin>
+        <!-- other plugin versions -->
+        <version.compiler.plugin>3.1</version.compiler.plugin>
+        <version.exec.plugin>1.2.1</version.exec.plugin>
 
-            <!-- maven-compiler-plugin -->
-            <maven.compiler.target>1.7</maven.compiler.target>
-            <maven.compiler.source>1.7</maven.compiler.source>
-        </properties>
-
-
-        <dependencies>
-
-            <!-- Business Interfaces of the server EJB. -->
-            <dependency>
-                <groupId>groupId</groupId>
-                <artifactId>client</artifactId>
-                <type>ejb</type>
-                <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>groupId</groupId>
-                <artifactId>Server</artifactId>
-                <version>1.0.0</version>
-                <!--<scope>import</scope>-->
-            </dependency>
-
-            <dependency>
-                <groupId>org.wildfly.plugins</groupId>
-                <artifactId>wildfly-maven-plugin</artifactId>
-                <version>1.2.1.Final</version>
-                <type>maven-plugin</type>
-            </dependency>
-
-        </dependencies>
-
-        <build>
-            <finalName>${project.artifactId}</finalName>
-            <plugins>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${version.compiler.plugin}</version>
-                    <configuration>
-                        <source>${maven.compiler.source}</source>
-                        <target>${maven.compiler.target}</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>${version.exec.plugin}</version>
-                    <configuration>
-                        <mainClass>com.illucit.ejbremote.EjbRemoteClient</mainClass>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>
+        <!-- maven-compiler-plugin -->
+        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.7</maven.compiler.source>
+    </properties>
 
 
-    </project>
+    <dependencies>
+
+        <!-- Business Interfaces of the server EJB. -->
+        <dependency>
+            <groupId>groupId</groupId>
+            <artifactId>client</artifactId>
+            <type>ejb</type>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>groupId</groupId>
+            <artifactId>Server</artifactId>
+            <version>1.0.0</version>
+            <!--<scope>import</scope>-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.wildfly.plugins</groupId>
+            <artifactId>wildfly-maven-plugin</artifactId>
+            <version>1.2.1.Final</version>
+            <type>maven-plugin</type>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se</artifactId>
+            <version>2.4.4.Final</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jglue.cdi-unit</groupId>
+            <artifactId>cdi-unit</artifactId>
+            <version>3.1.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jglue.cdi-unit</groupId>
+            <artifactId>cdi-unit</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+
+    </dependencies>
+
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${version.compiler.plugin}</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>${version.exec.plugin}</version>
+                <configuration>
+                    <mainClass>com.illucit.ejbremote.EjbRemoteClient</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
+</project>
